<resources>
     <string name="fake_alert"> There was a problem validating your account, please make sure you have entered the correct deatails.
                               \nPlease delete the existing account and create a new one with same number.</string>
    <string name="warning_text">
                               Please upload any id proof to validate your Account(adhaar card/pan card/voter Id)\n
                               User privacy is our utmost concern.User data will not be sold or used for marketing purposes. </string>

    <string name="faq">
        <b>Why cant I send request?</b><br>\n
        <i>All new accounts has to go through verification process to prevent misuse of user data. Users wont be able to send or received
           requests from other users when their account is pending for verification.Please be patient while we verify your
           account based on the user details.</i></br>\n\n
        <br><br><b>Why the colors are distorted?</b><br>\n
        <i>Some devices override colors when switched to Night/Dark mode. Please make sure to
            exclude this app from forced dark mode.</i></br></br>\n\n
        <br><br><b>Im asked delete the account</b></br></br>\n
        <br><i>It is because your account was invalidated by the admin. It can only mean that the details provided by you was found to be false or
           inaccurate.</i></br>
    </br>\n\n
        <b>Who can see my number?</b>\n
        <i>Phone numbers are only shared with whome you get matched. No one can access you contact details before getting matched.</i>\n\n
        <b>What after i find a match?</b>\n
        <i>Its up to the user to proceed accordingly. The other user will be notified about the match.</i>
    </string>
    <string name="change_log"><b>Version_0.75_alpha</b>\n
                                 <i>01/01/2021</i>\n
                               * Filter based on age and gender \n
                               * Disabled screenshot/recording \n
                               * Added option to view profile \n
                               * Redesigned user details page \n
                               * Redesinged explore  \n
                               * Added delete account \n
                               * fixed previous bugs \n
                              \n<b>Version_0.5_alpha</b>\n
                              <i>23/12/2020</i>\n
                               * Added security measures \n
                               * Added live notification support\n
                               * Added Image compression(beta) \n
                               * Added option to detect old users \n
                               * Added Auto generating bio \n
                               * New animations \n
                               * New profile section \n
                               * Option to edit user deatils \n
                               * Call or message when matched \n
                               * Fixed bugs from previous version\n\n
                              <b>Version_0.1_alpha</b>\n
                               <i>11/12/2020</i>\n
                               * first alpha release \n
                               * Send and received requests(beta) \n
                               * Added Instant data retrival(beta) \n
                               * Option to add profile picture \n
    </string>
    <string name="app_name">Ayiri Matrimony</string>
    <string name="check">check</string>
    <string name="add">add</string>
    <string name="demo">demo</string>
    <string name="enter_your_name">First name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_your_family">Family name</string>
    <string name="enter_your_age">Age</string>
    <string name="submit">submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_a_profile_picture">Choose a profile picture</string>
    <string name="choose">choose</string>
    <string name="upload">upload</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="family_name">Family name</string>
    <string name="phone">Phone number</string>
    <string name="upload_image">Upload image</string>
    <string name="entre_the_value_here">Enter the value here</string>
    <string name="settings">Settings</string>
    <string name="matches">Matches</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="get_otp">get otp</string>
    <string name="note">Phone numbers wont be shared with anyone unless you find a match</string>
    <string name="step_1">Step 1</string>
    <string name="next">Next</string>
    <string name="step_2">Step 2</string>
    <string name="welcome_text">welcome text</string>
    <string name="last_seen">Last seen</string>
    <string name="accept">Accept</string>
    <string name="contact">Contact</string>
    <string name="no_requests">No requests yet</string>
    <string name="no_sent">You havent sent any requests to anyone yet</string>
    <string name="no_match">No matches yet</string>
    <string name="step_3">Step 3</string>
    <string name="continue_">Continue</string>
    <string name="please_connect_to_internet">Please connect to internet</string>
    <string name="highest_qualification">Qualification :</string>
    <string name="working_sector">Working sector :</string>
    <string name="your_height">Your height :</string>
    <string name="currently_living_in">Currently living in</string>
    <string name="description">description</string>
    <string name="requested">Requested</string>
    <string name="bio">Bio</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="whats_new">Whats new?</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="faq_s">FAQs</string>
    <string name="you_havent_sent_request_to_anyone">You havent sent any requests yet</string>
    <string name="you_havent_received_any_requests">You havent received any requests yet</string>
    <string name="you_havent_found_any_matches_yet">you havent matched with anyone yet</string>
    <string name="search_for">Search for</string>
    <string name="done">Done</string>
    <string name="view_profile">View profile</string>
    <string name="previous">Previous</string>
    <string name="qualification">Qualification</string>
    <string name="working_at">Working at</string>
    <string name="height_in_feet">Height (in feet)</string>
    <string name="fathers_name">Fathers name</string>
    <string name="mother">Mothers name</string>
    <string name="job_title">Job title</string>
    <string name="upload_id_proof">Upload id-proof</string>
    <string name="gender">Gender</string>
    <string name="sort_by_age">Sort by age</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="send_request">Send request</string>
</resources>