<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".upload_img">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/choose_a_profile_picture"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        app:civ_border_width="3dp"
        android:layout_height="300dp"
        android:src="@mipmap/ic_launcher_f"
        app:civ_border_color="@color/black" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/choose"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/choose" />
    <Button
        android:id="@+id/upload"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/upload" />
</LinearLayout>