<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/search_for"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="30dp">

                <Button
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#D063E3"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:ignore="ButtonStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="30dp">

                <Button
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#D063E3"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:ignore="ButtonStyle" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="30dp">

                <Button
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#D063E3"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:ignore="ButtonStyle" />

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
