<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:elevation="20dp"
    android:id="@+id/main_card"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:orientation="horizontal"
        android:showDividers="none">

        <androidx.cardview.widget.CardView
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7.5dp"
            android:elevation="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:text="@string/demo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <!--
            <TextView
                android:id="@+id/last"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@+id/simple_card"
                android:text="@string/last_seen"
                android:textColor="#636363"
                android:textSize="14sp"
                android:textStyle="bold" />
             -->
            <androidx.cardview.widget.CardView
                android:id="@+id/simple_card"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <Button
                    android:id="@+id/request"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#8F44FA"
                    android:text="@string/contact"
                    android:textColor="@color/white"
                    android:textSize="11.5sp"
                    tools:ignore="SmallSp" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>